objects/CC_Enrolled_Program__c.object
<CustomObject>
    <fields>
        <fullName>Case_Program__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Case &amp; Program</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Enrolled Programs</relationshipLabel>
        <relationshipName>Enrolled_Programs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Individual__c</fullName>
        <label>Individual</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>notEqual</operation>
                <value>Representative</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Enrolled Programs</relationshipLabel>
        <relationshipName>Enrolled_Programs</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Program_Detail__c</fullName>
        <label>Program Detail</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>CC_Program_Service__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program Detail</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>CC_Program_Service__c</referenceTo>
        <relationshipLabel>Enrolled Programs</relationshipLabel>
        <relationshipName>Enrolled_Programs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Reserved</fullName>
                </value>
                <value>
                    <fullName>Filled</fullName>
                </value>
                <value>
                    <fullName>Vacated</fullName>
                </value>
                <value>
                    <fullName>Freed</fullName>
                </value>
                <value>
                    <fullName>Closed-Denied LOC Assessment</fullName>
                </value>
                <value>
                    <fullName>Waitlisted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Enrolled Program</label>
    <nameField>
        <displayFormat>EP_{00000}</displayFormat>
        <label>Enrolled Program ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrolled Programs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>